--- a/jscomp/bin/Makefile
+++ b/jscomp/bin/Makefile
@@ -10,10 +10,10 @@ BSC=./bsc.exe
 OCAMLOPT_FLAGS= -g -w -a ../stubs/ext_basic_hash_stubs.c
 # -inline 1000 makes size too large
 # TODO: make sure it can be bootstrapped, at least is a very good
-# test case of our optimizations 
+# test case of our optimizations
 bsppx.exe: config_bsppx.mli config_bsppx.ml bsppx.mli bsppx.ml
 	$(NATIVE) $(OCAMLOPT_FLAGS) $^ -o $@
-	
+
 bspp.exe:  config_bspp.mli config_bspp.ml bspp.mli bspp.ml
 	$(NATIVE) $(OCAMLOPT_FLAGS) $^ -o $@
 
@@ -26,6 +26,11 @@ bsb.exe:  bsb.mli bsb.ml
 bsb_helper.exe:  bsb_helper.mli bsb_helper.ml
 	$(NATIVE) $(OCAMLOPT_FLAGS) unix.cmxa str.cmxa -w -a $^ -o $@
 
+refmt.exe:refmt_main.ml
+	$(NATIVE) -I +compiler-libs ocamlcommon.cmxa $^ -o $@
+reactjs_jsx_ppx.exe:reactjs_ppx.ml
+	$(NATIVE) -I +compiler-libs ocamlcommon.cmxa $^ -o $@
+
 config_whole_compiler.ml:config_whole_compiler.mlp ../config.js
 	node ../config.js
 bsc.exe: config_whole_compiler.mli config_whole_compiler.ml  whole_compiler.mli whole_compiler.ml
@@ -37,4 +42,4 @@ bspack.exe: config_bspack.mli config_bspack.ml bspack.mli bspack.ml
 bspack.js:	config_bspack.mli config_bspack.ml bspack.mli bspack.ml
 	$(BSC) $(BSC_FLAGS) $^
 
-all: bsppx.exe bspp.exe bsdep.exe bsc.exe bspack.exe bsb.exe bsb_helper.exe
+all: bsppx.exe bspp.exe bsdep.exe bsc.exe bspack.exe bsb.exe bsb_helper.exe refmt.exe reactjs_jsx_ppx.exe
