add auto-uncurry  support for external FFI

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -232,7 +232,9 @@ CORE_SRCS= type_int_to_string type_util  ocaml_stdlib_slots bs_conditional_initi
 	lam_compile_util lam_stats config_util lam_compile_defs js_map js_fold js_fold_basic js_pass_scope\
 	js_op_util js_analyzer js_shake js_exp_make js_long js_of_lam_exception js_of_lam_module js_of_lam_array js_of_lam_block js_of_lam_string\
 	js_of_lam_tuple js_of_lam_record js_of_lam_float_record js_arr lam_compile_const \
-	lam_inner lam_util \
+	lam_inner \
+	lam_util \
+	lam_eta_conversion\
 	lam_group \
 	lam_pass_deep_flatten\
 	js_stmt_make js_pass_flatten\
