--- a/jscomp/runtime/Makefile
+++ b/jscomp/runtime/Makefile
@@ -17,6 +17,7 @@ caml_oo.cmj : caml_array.cmj
 js_unsafe.cmj:js_unsafe.cmi js.cmj js.cmi
 js_unsafe.cmi js.cmj: js.cmi
 caml_format.cmj caml_io.cmj caml_oo_curry.cmj: curry.cmj
+caml_format.cmj: caml_int64.cmj caml_int32.cmj caml_utils.cmj caml_string.cmj
 caml_weak.cmj caml_module.cmj: caml_obj.cmj js_primitive.cmj
 caml_builtin_exceptions.cmj: caml_builtin_exceptions.cmi js_unsafe.cmi
 block.cmj: block.cmi
