--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -112,7 +112,8 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	test\
 	undef_regression2_test\
 	js_global_test\
-	bang_primitive
+	bang_primitive\
+	compare_test
 
 
 # bs_uncurry_test
