--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ _build
 *.rawlambda
 *.lambda
 *.zip
-*.gz
+
 *.mlast
 *.mliast
 # special file
@@ -80,7 +80,7 @@ jscomp/bin/bsc
 jscomp/bin/config_whole_compiler.ml
 lib/bs
 lib/js/jscomp/test
-
+#ignore temporary directory
 *.goog.js
 *.jsoo.js
 *.so
