--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -116,7 +116,9 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	js_int_test\
 	bang_primitive\
 	compare_test\
-	js_cast_test
+	js_cast_test\
+	gpr_1423_nav\
+	gpr_1423_app_test
 
 
 # bs_uncurry_test
